[package]
name = "throttled_xrp_rpc"
version = "0.3.0"
authors = ["Aiden McClelland <aiden.k.mcclelland@gmail.com>", "Drew Ansbacher <drew.ansbacher@gmail.com>"]
repository = "https://github.com/DR-BoneZ/throttled-xrp-rpc-rs"
homepage = "https://github.com/DR-BoneZ/throttled-xrp-rpc-rs"
license = "MIT"
readme = "README.md"
documentation = "http://docs.rs/throttled_xrp_rpc/"
description = "Throttled XRP RPC API client for Rust."
edition = "2018"

[dependencies]
throttled_json_rpc = { rev = "95603dc2762f1f0e7f5743f0c5b97d42455d54ac", version = "=0.1.0", git = "https://github.com/SALTLending/throttled-json-rpc-rs"}
anyhow = "1.0.*"
reqwest = "0.10.*"
serde = { version = "1.0.*", features = ["derive", ] }
serde_json = "1.0.*"
bigdecimal = { version = "0.1.*", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.*"
num-traits = "0.2.*"
tokio = {version = "0.2.*", features  = ["macros"] }
